fix: keep yellow link color in dark mode

--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -33,7 +33,8 @@
     overflow-wrap: break-word;
   }
   
-  a, a:visited { color: inherit; }
+  a { color: blue; }
+  a:visited { color: blue; }
 
   .post-meta { text-align: right; }
   
